# Kahani

./: .gitignore  Dockerfile  README.md  api.py  app.py  kahani.py  llm.py  models.py  nuget.config  pipeline.yml  pyproject.toml  utils.py
.github/workflows/: codeql.yml
prompts/: __init__.py
prompts/bounding_box/: system.md  user.md
prompts/break_story_into_scenes/: system.md  user.md
prompts/classify_change/: __init__.py  system.md
prompts/create_story/: __init__.py
prompts/extract_characters/: __init__.py  system.md
prompts/generate_character/: __init__.py  system.md  user.md
prompts/generate_pose/: system.md  user.md
prompts/generate_scenes/: __init__.py  system.md  user.md
prompts/summarise_culture/: user.md
prompts/user_input/: system.md
src/: Dockerfile  api.py  app.py  kahani.py  llm.py  models.py  pipeline.yml  pyproject.toml  utils.py
src/prompts/: __init__.py  base.py
terraform/: .gitignore  README.md  main.tf  plan  variables.tf  webapp.tf
tests/: remove_bg.py  test_canny_image.py  test_concat_images.py  test_crop.py  test_crop2.py  test_scene_creation.py  test_text_2_char_img.py
tests/image_processing/: test_image_processing.py
tests/prompts/: bounding_box.py  break_story_into_scenes.py  classify_change.py  create_story.py  extract_characters.py  extract_culture.py  generate_character.py  generate_scenes.py  summarise_culture.py
tests/ref_guided_inpainting/: neg_prompt.txt  prompt.txt  reference_guided_inpainting.py
tests/ref_img_gen/: generate_final_image_from_reference_image.py  prompt.txt
(+22 files in other folders)
